<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/ic_bg"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:gravity="center"
        android:textSize="22sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/hey_congratulations"
        android:textStyle="bold"
        android:textSize="24sp"
        android:layout_marginTop="16dp"
        android:textColor="@color/white"
    />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Ritesh"
        android:textSize="18sp"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:id="@+id/userName"
    />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Your score 5 out of 9"
        android:gravity="center"
        android:textColor="#f6f6f6"
        android:layout_marginTop="16dp"
        android:id="@+id/scoreView"
    />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:backgroundTint="@color/white"
        android:textColor="#7a8089"
        android:text="@string/btn_finish_text"
        android:textStyle="bold"
        android:id="@+id/btnFinish"
     />

</LinearLayout>